--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
@@ -23,6 +23,8 @@ router path-selection
    !
    load-balance policy LB-DEFAULT-AUTOVPN-POLICY-CONTROL-PLANE
       path-group INET
+      path-group LTE
+      path-group MPLS
    !
    load-balance policy LB-DEFAULT-AUTOVPN-POLICY-IT
       path-group MPLS
