--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -117,6 +117,8 @@ router path-selection
    peer dynamic source stun
    tcp mss ceiling ipv4 ingress
    !
+   path-group AWS id 105
+   !
    path-group Equinix id 103
    !
    path-group INET id 101
@@ -143,25 +145,32 @@ router path-selection
       path-group INET priority 2
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
+      path-group AWS
       path-group INET
       path-group LAN_HA
       path-group MPLS
+      path-group Equinix priority 2
+      path-group Satellite priority 2
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
-      path-group Equinix
       path-group INET
       path-group LAN_HA
-      path-group MPLS priority 42
+      path-group Equinix priority 2
+      path-group MPLS priority 4223
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
+      path-group Equinix
       path-group INET
       path-group LAN_HA
       path-group MPLS
    !
    load-balance policy LB-DEFAULT-POLICY-DEFAULT
+      path-group AWS
       path-group INET
       path-group LAN_HA
       path-group MPLS
+      path-group Equinix priority 2
+      path-group Satellite priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
       path-group INET
