--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router1.cfg
@@ -7,9 +7,17 @@ hostname uplink_lan_wan_router1
 router path-selection
    tcp mss ceiling ipv4 ingress
    !
+   path-group INET id 100
+      !
+      local interface Ethernet1
+      !
+      peer dynamic
+   !
    load-balance policy LB-DEFAULT-POLICY-CONTROL-PLANE
+      path-group INET
    !
    load-balance policy LB-DEFAULT-POLICY-DEFAULT
+      path-group INET
    !
    policy DEFAULT-POLICY
       default-match
@@ -58,6 +66,12 @@ interface Dps1
    description DPS Interface
    mtu 9214
    ip address 192.168.2.1/32
+!
+interface Ethernet1
+   description Comcast_999
+   no shutdown
+   no switchport
+   ip address 10.9.9.9/31
 !
 interface Ethernet2
    description UPLINK_LAN_L2LEAF_Ethernet1
