--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_LAN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_LAN_TESTS.yml
@@ -26,9 +26,19 @@ wan_router: # dynamic_key: node_type
       id: 1
       uplink_switch_interfaces: [Ethernet1]
       uplink_native_vlan: 10
+      l3_interfaces:
+        - name: Ethernet1
+          wan_carrier: Comcast
+          wan_circuit_id: 999
+          ip_address: 10.9.9.9/31
     - name: uplink_lan_wan_router2
       uplink_switch_interfaces: [Ethernet2]
       id: 2
+      l3_interfaces:
+        - name: Ethernet1
+          wan_carrier: Comcast
+          wan_circuit_id: 999
+          ip_address: 10.9.9.1/31
 
 tenants: # dynamic_key: network_services
   - name: TEST
@@ -74,8 +84,14 @@ wan_ipsec_profiles:
 wan_mode: autovpn
 
 wan_route_servers: []
-wan_path_groups: []
-wan_carriers: []
+wan_path_groups:
+  - name: INET
+    ipsec: false
+    # TODO remove one once auto-id is implemented - for now required in schema
+    id: 100
+wan_carriers:
+  - name: Comcast
+    path_group: INET
 bgp_peer_groups:
   wan_overlay_peers:
     listen_range_prefixes: [0.0.0.0/0]
