--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
@@ -39,7 +39,7 @@ keys:
           default: true
         import_path_groups:
           type: list
-          description: List of [ath-groups to import in this path-group.
+          description: List of path-groups to import in this path-group.
           items:
             type: dict
             keys:
@@ -49,3 +49,16 @@ keys:
               local:
                 type: str
                 description: Optional, if not set, the path-group `name` is used as local.
+        default_preference:
+          type: str
+          convert_types:
+            - int
+          description: |-
+            Preference to be used in auto-generated load balance policies and policies in which preference is not given for the path group.
+
+            Valid values are 1-65535 | "preferred" | "alternate" | "excluded".
+
+            preferred is converted to priority 1.
+            alternate is converted to priority 2.
+            excluded means that the path-group is not considered for generating policies.
+          default: "preferred"
