Refactor(eos_designs): WAN Preview - Prefix default zone name with region name.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
@@ -17,7 +17,7 @@ hostname cv-pathfinder-edge-custom-default-policy
 router adaptive-virtual-topology
    topology role edge
    region AVD_Land_West id 42
-   zone DEFAULT-ZONE id 1
+   zone AVD_Land_West-ZONE id 1
    site Site1 id 1
    !
    policy DEFAULT-POLICY
