--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_regions.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_regions.schema.yml
@@ -27,7 +27,7 @@ keys:
         sites:
           type: list
           description: |-
-            All sites are placed in a default zone called DEFAULT-ZONE with ID 1.
+            All sites are placed in a default zone "<region_name>-ZONE" with ID 1.
           primary_key: name
           items:
             type: dict
@@ -38,8 +38,8 @@ keys:
               id:
                 type: int
                 description: |-
-                  The site ID must be unique within a zone.
-                  Given that all the sites are placed in the DEFAULT-ZONE, the site ID must be unique within a region.
+                  The Site ID must be unique within a zone.
+                  Given that all the Sites are placed in a Zone named after the Region, the Site ID must be unique within a Region.
               location:
                 type: str
                 description: Will be interpreted
