--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
@@ -17,7 +17,7 @@ hostname cv-pathfinder-edge-no-default-policy
 router adaptive-virtual-topology
    topology role edge
    region AVD_Land_East id 43
-   zone DEFAULT-ZONE id 1
+   zone AVD_Land_East-ZONE id 1
    site Site511 id 511
    !
    policy DEFAULT-POLICY
