--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -19,7 +19,7 @@ hostname cv-pathfinder-edge2B
 router adaptive-virtual-topology
    topology role edge
    region AVD_Land_West id 42
-   zone DEFAULT-ZONE id 1
+   zone AVD_Land_West-ZONE id 1
    site Site423 id 423
    !
    policy DEFAULT-AVT-POLICY
