--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -19,7 +19,7 @@ hostname cv-pathfinder-transit1B
 router adaptive-virtual-topology
    topology role transit region
    region AVD_Land_West id 42
-   zone DEFAULT-ZONE id 1
+   zone AVD_Land_West-ZONE id 1
    site Site422 id 422
    !
    policy DEFAULT-AVT-POLICY
