Feat(eos_designs): Enable KERNELFIB_PROGRAM_ALL_ECMP for all wan routers

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -1,5 +1,7 @@
 !RANCID-CONTENT-TYPE: arista
 !
+agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
+!
 service routing protocols model multi-agent
 !
 hostname autovpn-edge-no-default-policy
