--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -1,5 +1,7 @@
 !RANCID-CONTENT-TYPE: arista
 !
+agent KernelFib environment KERNELFIB_PROGRAM_ALL_ECMP=1
+!
 flow tracking hardware
    tracker WAN-FLOW-TRACKER
       record export on inactive timeout 70000
